# -VS2022_Runner-

./: CMakeLists.txt  Cargo.toml  README.md  advapi32.dll.py  advapi32.py  common.hpp  global.cpp  global.h  global.h.old  kernel32.cpp  kernel32.hpp  kernel32.py  log.h  log.py  main.cpp  main.py  nt_apiset_cpp_hooks.hpp  pe_imports.py  registry.json  ucrtbase.cpp  ucrtbase.hpp  vcruntime140.cpp  vcruntime140.hpp  whisky_.cpp  whisky__2.cpp  whisky_rr_.cpp  win_types.h  win_types.py
nt_apiset_cpp_hooks/: lib.rs
